[package]
name = "tunnel-messenger"
version = "0.1.0"
authors = ["Ghabriel <ghabriel.nunes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.2"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
